--- a/SAMv1.tex
+++ b/SAMv1.tex
@@ -364,18 +364,25 @@ of the mandatory fields in the SAM format:
   equals the length of the reference sequence from the leftmost mapped base to the
   rightmost mapped base (i.e. it could be calculated as: pos.right - pos.left + 1).
   Mapped bases should not include soft-clipped bases.
-  The rightmost segment should be negated (i.e. prepended with a `-' character),
-  to form {\sf TLEN}, while the leftmost segment should remain positive (in which 
+  For the rightmost segment, the calculated length should be multiplied by {\tt -1}
+  (i.e. prepended with a `-' character in SAM format), to form the signed value of 
+  {\sf TLEN}, while the leftmost segment should remain positive (in which 
   case prepending a `+' sign is optional). 
   Segments which are neither the leftmost nor rightmost (i.e. middle segments) 
   may have either positive or negative {\sf TLEN}. 
-  If all segments have the same leftmost mapped position, the 
-  implementation should designate one as the leftmost segment, one as 
-  the rightmost segment, and others (if any) as middle segments. 
-  TLEN should be set to 0 when information on template length is unavailable, 
-  such as for a single-segment template or when the first or last 
+  If multiple segments share the same leftmost mapped position, they should 
+  all be treated as if they are the leftmost segment for the purposes of 
+  determining the sign of {\sf TLEN} (i.e. they should all be `+'). 
+  If multiple segments share the same rightmost mapped position, they should 
+  all be treated as if they are the rightmost segment for the purposes of 
+  determining the sign of {\sf TLEN} (i.e. they should all be `-'). 
+  For any segments that do not include a mapped base at either the leftmost or 
+  rightmost position (i.e. middle segments), {\sf TLEN} may be either positive 
+  or negative. 
+  {\sf TLEN} should be set to 0 when information on template length is 
+  unavailable (e.g. for a single-segment template or when the first or last 
   segment of a multi-segment template is unmapped or are mapped to 
-  different references.
+  different references).
 \item {\sf SEQ}: segment SEQuence. This field can be a `*' when the
   sequence is not stored. If not a `*', the length of the sequence must
   equal the sum of lengths of {\tt M/I/S/=/X} operations in {\sf CIGAR}.
