--- a/VCFv4.3.tex
+++ b/VCFv4.3.tex
@@ -1034,6 +1034,27 @@ Bundle Copy Number & 1 & 3 & 1 \\
 Haplotype quality & 30 & 40 & 40 \\
 \end{tabular}
 
+\subsection{Representing unknown or unspecified alternate alleles}
+Inspired by the gVCF file format (\url{https://support.basespace.illumina.com/knowledgebase/articles/147078-gvcf-file}),
+it is necessary, primarily in clinical settings, to report sequencing data evidence for both variant and non-variant
+positions in the genome. The convention adopted here is to represent reference evidence as likelihoods against an
+unknown alternate allele. Think of this as the likelihood for reference as compared to any other possible alternate
+allele (both SNP, indel, or otherwise). The symbolic alternate allele $<$NON_REF$>$ is used to represent this
+unspecified alternate allele.
+
+Example records are given below:
+\begin{flushleft}
+\begin{tabular}{ l l l l l l l l l l }
+\#CHROM & POS & ID & REF & ALT & QUAL & FILTER & INFO & FORMAT & Sample \\
+1 & 1004370 & . & G & <NON_REF> & . & . & END=1004383 & GT:DP:GQ:MIN_DP:PL & 0/0:25:60:23:0,60,900 \\
+1 & 1004384 & . & C & <NON_REF> & . & . & END=1004388 & GT:DP:GQ:MIN_DP:PL & 0/0:25:45:25:0,42,630 \\
+1 & 1004389 & . & T & TC,<NON_REF> & 213.73 & . & . & GT:AD:DP:GQ:PL & 0/1:14,9,0:23:99:251,0,362,293,392,686 \\
+1 & 1004390 & . & C & <NON_REF> & . & . & END=1004390 & GT:DP:GQ:MIN_DP:PL & 0/0:26:0:26:0,0,315 \\
+1 & 1004391 & . & C & <NON_REF> & . & . & END=1004395 & GT:DP:GQ:MIN_DP:PL & 0/0:27:63:27:0,63,945 \\
+1 & 1004396 & . & G & C,<NON_REF> & 0 & . & . & GT:AD:DP:GQ:P & 0/0:22,2,0:24:52:0,52,953,66,958,972 \\
+1 & 1004397 & . & T & <NON_REF> & . & . & END=1004416 & GT:DP:GQ:MIN_DP:PL & 0/0:22:14:22:0,15,593 \\
+\end{tabular}
+\end{flushleft}
 \pagebreak
 \section{BCF specification}
 
